--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,7 @@ body {
 .btn {
   background-color: var(--primary-color);
   color: var(--button-text-color);
+  font-size: 14px;
   &:hover {
     background-color: var(--primary-color) !important;
     color: var(--button-text-color) !important;
@@ -1822,15 +1823,28 @@ body {
     border-radius: 10px;
     padding: 5px 10px;
   }
-
-  .h_delegted_profile h4 {
-    font-size: 15px;
+  .heading{
+    font-size: 14px;
+  }
+  .userid_button{
+line-height: 50px;
+  }
+  .delegted-profile {
+  h4 {
+    font-size: 12px;
     font-weight: 700;
+    color: var(--secondary-text-color);
   }
-
-  .h_delegted_profile p {
+  p {
     font-size: 11px;
+    color: var(--secondary-text-color);
   }
+  a{
+    color: var(--fourdary-text-color);
+    text-decoration: none;
+  }
+}
+
 
   .nav-end-side {
     gap: 20px;
@@ -2370,7 +2384,7 @@ body {
       transform: translateX(100%); /* Initially hidden */
       .modal-body {
         .content-one {
-          h5 {
+          h5 , span{
             font-size: 14px;
           }
         }
@@ -2395,14 +2409,18 @@ body {
       margin-bottom: 10px;
     }
   
-    .sidebar-new a {
-      text-decoration: none;
-      color: #333;
-      display: block;
-      padding: 10px;
-      border-radius: 5px;
-      transition: background-color 0.3s ease;
-    }
+    #nav-calendar{
+      .calender-top{
+        p,span{
+          font-size: 14px;
+          color: var( --secondary-text-color);
+        }
+        
+      }
+      .all-time{
+          font-size: 11px;
+        }
+      }
   
     .sidebar-new a:hover {
       background-color: #ddd;
