--- a/css/style.css
+++ b/css/style.css
@@ -639,6 +639,14 @@
       width: 920px;
       border-radius: 20px;
       background-color: var(--modal-bg);
+      position:relative;
+      .close-btn{
+        position: absolute;
+        font-size: 37px;
+        top: -15px;
+        right: 5px;
+        z-index:10;
+      }
     }
 
     .modal-body {
@@ -962,14 +970,6 @@
       a {
         width: 160px;
         height: 32px;
-        border-radius: 6px;
-        border: 1px solid #e8eaed;
-        text-decoration: none;
-        font-size: 14px;
-        font-weight: 400;
-        line-height: 32px;
-        text-align: center;
-        color: var(--secondary-text-color);
       }
     }
   }
@@ -992,6 +992,14 @@
     box-shadow: 0px 16px 48px 0px #0000003d;
     border: 1px solid #e8eaed;
     background-color: var(--modal-bg);
+    position:relative;
+    .close-btn{
+      position: absolute;
+      font-size: 37px;
+      top: -15px;
+      right: 5px;
+      z-index:10;
+    }
   }
 
   .search-side {
