--- a/css/style.css
+++ b/css/style.css
@@ -1228,7 +1228,7 @@ body {
     transition: transform 0.3s ease;
     /* Smooth slide effect */
     transform: translateX(100%);
-
+    z-index: 1000;
     /* Initially hidden */
     .modal-body {
       .content-one {
@@ -2708,7 +2708,8 @@ body {
   .sidebar-add-card {
     .offcanvas {
       width: 327px;
-
+      height: calc(100vh - 64.3px);
+      margin-top: 64.3px;  
       .offcanvas-header {
         h5 {
           font-size: 16px;
